# azure_automl

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  future_work.md  pyproject.toml  pytest.ini  test_classification_data.csv  test_data.csv  test_mcp_client.py  todo.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_experiment_limits.py  0003_refactor_dataset_relationships.py  0004_add_endpoint_azure_fields.py  0005_add_default_roles.py  0006_remove_tenant_id_from_users.py  0007_replace_tenant_id_with_user_id.py  0008_enhance_model_deployment_schema.py  0009_add_dataset_private_field.py
app/: auth.py  config.py  main.py
app/db/: models.py
app/routes/: datasets.py  endpoints.py  experiments.py  models.py  runs.py
app/schemas/: experiment.py  user.py
app/services/: automl.py
app/tasks/: background.py
docs/: RBAC.md  api-reference.md  authentication.md  database-setup.md  deployment.md  installation.md  testing.md
queries/: add_roles
scripts/: create_database_user.py  create_tables.py  create_token.py  debug_connection.py  deploy_best_model.py  find_service_principal_name.py  find_sp_name_simple.py  generate_mcp_token.py  generate_test_token.py  manage_roles.py  test_azure_ad_token.py  test_both_databases.py  test_db_connection.py  test_device_code_auth.py  test_endpoint.py  test_group_auth.py  test_odbc_direct.py
src/app/: __init__.py
src/automlapi/: __init__.py  auth.py  config.py  main.py  runserver.py
src/automlapi/db/: __init__.py  models.py
src/automlapi/routes/: auth.py  datasets.py  deploy.py  endpoints.py  experiments.py  models.py  rbac.py  runs.py  users.py
src/automlapi/schemas/: audit.py  cost.py  dataset.py  deployment.py  endpoint.py  experiment.py  model.py  run.py  user.py
src/automlapi/services/: automl.py  automl_original_backup.py  azure_client.py  dataset_service.py  deployment_service.py  endpoint_service.py  experiment_service.py  model_service.py
src/automlapi/tasks/: background.py
src/automlapi/utils/: __init__.py
src/tests/: test_automl_limits.py  test_routes.py  test_services.py
tests/: test_services.py
