[project]
name = "automlapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tim-a-davis", email = "timothyd@me.com" }
]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "azure-ai-ml>=1.27.1",
    "azure-identity>=1.23.0",
    "fastapi>=0.115.14",
    "jwt>=1.4.0",
    "pyodbc>=5.0.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
runserver = "automlapi.runserver:main"
