[project]
name = "automlapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tim-a-davis", email = "timothyd@me.com" }
]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "azure-ai-ml>=1.27.1",
    "azure-identity>=1.23.0",
    "fastapi>=0.115.14",
    "PyJWT>=2.8.0",
    "requests>=2.31.0",
    "azure-mgmt-authorization>=4.0.0",
    "pyodbc>=5.0.1",
    "pydantic>=2.11.7",
    "pydantic-settings~=2.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
    "pandas>=2.3.0",
    "fastapi-mcp>=0.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
runserver = "automlapi.runserver:main"

[tool.hatch.build.targets.wheel]
packages = ["src/automlapi"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
]
